@@ -1,0 +1,34 @@
+
+texture-region-uat.png
+size: 128,128
+format: RGBA8888
+filter: Nearest,Nearest
+repeat: none
+cardDiamondsA
+  rotate: false
+  xy: 2, 52
+  size: 35, 48
+  orig: 35, 48
+  offset: 0, 0
+  index: -1
+cardDiamondsJ
+  rotate: false
+  xy: 2, 2
+  size: 35, 48
+  orig: 35, 48
+  offset: 0, 0
+  index: -1
+cardDiamondsK
+  rotate: false
+  xy: 39, 52
+  size: 35, 48
+  orig: 35, 48
+  offset: 0, 0
+  index: -1
+cardDiamondsQ
+  rotate: false
+  xy: 39, 2
+  size: 35, 48
+  orig: 35, 48
+  offset: 0, 0
+  index: -1
