@@ -1,0 +1,5 @@
+{
+	"maxWidth": 128,
+    "scale": [ 0.25 ],
+    "square": true
+}
